# zookeeper-operator

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  NOTICE  README.adoc  README.md  Tiltfile  _test.yaml  bors.toml  config.json  config.yaml  config_config.json  crate-hashes.json  crds.yaml  default.nix  deny.toml  renovate.json  rust-toolchain.toml
.ci/integration-tests/aws-eks/: cluster.yaml  test.sh
.ci/integration-tests/azure-aks/: cluster.yaml  test.sh
.ci/integration-tests/hcloud-centos-8/: cluster.yaml  test.sh
.ci/integration-tests/ionos-k8s/: cluster.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: all.yml  build.yaml  build.yml  build_artifacts.yml  build_artifacts_release.yml  cleanup_artifacts.yml  daily_security.yml  docker.yml  helm_tests.yml  integration-test.yml  nightly.yml  nightly_apt.yml  pr_generate_manifests.yml  publish_dev_artifacts.yml  publish_main_artifacts.yml  publish_pr_artifacts.yml  publish_release_artifacts.yml  reviewdog.yaml  reviewdog.yml  rust.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
.readme/partials/borrowed/: documentation.md.j2  links.md.j2  overview_blurb.md.j2
crd/: Cargo.toml  config.json  zookeepercluster.crd.yaml
crd/src/: error.rs  lib.rs  ser.rs  util.rs
deploy/: DO_NOT_EDIT.md
deploy/config-spec/: properties.yaml
deploy/crd/: restart.crd.yaml  start.crd.yaml  stop.crd.yaml  zookeepercluster.crd.yaml  zookeeperznode.crd.yaml
deploy/experimental/olm/: catalog-source.yaml  olm_deploy.sh  operator-group.yaml  subscription.yaml
deploy/experimental/olm/manifests/: configmap.yaml  csv.yaml
deploy/helm/: .gitignore  ct.yaml  roles.yaml
deploy/helm/zookeeper-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/zookeeper-operator/configs/: properties.yaml
deploy/helm/zookeeper-operator/crds/: crds.yaml
deploy/helm/zookeeper-operator/templates/: clusterrole-operator.yaml  clusterrole-product.yaml  configmap.yaml  deployment.yaml  roles.yaml  service.yaml  serviceaccount.yaml
deploy/manifests/: configmap.yaml  crds.yaml  deployment.yaml  kustomization.yaml  roles.yaml  serviceaccount.yaml
deploy/manifests/crds/: crds.yaml
deploy/manifests/templates/: deployment.yaml  roles.yaml  serviceaccount.yaml
deploy/manifests/templates/tests/: test.yaml
deploy/manifests/tests/: test.yaml
deploy/olm/: .gitignore  README.md  bundle.sh  catalog.Dockerfile
deploy/olm/23.1/: catalog-source.yaml  olm_generate.sh  zookeeper-subscription.yaml
deploy/olm/23.1.0/: .gitignore  README.md  bundle.sh  catalog-source.yaml  commons-subscription.yaml  olm_generate.sh  operator-group.yaml  scc.yaml  zookeeper-subscription.yaml
deploy/olm/23.1.0/manifests/: csv.yaml  roles.yaml
deploy/olm/23.4.0-rc1/manifests/: clusterserviceversion.yaml  configmap.yaml  csv.yaml
deploy/olm/23.4.0-rc1/metadata/: dependencies.yaml
deploy/olm/23.4.0/manifests/: stackable-zookeeper-operator.clusterserviceversion.yaml
deploy/olm/catalog/: operator.yaml
deploy/olm/manifests/: csv.yaml  roles.yaml  zookeepercluster.crd.yaml
docker/: Dockerfile
docs/: antora.yml  templating_vars.yaml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/examples/: example-cluster-tls-authentication-secret.yaml  example-cluster-tls-authentication.yaml  example-cluster-tls-encryption.yaml  (+3 more)
docs/modules/usage_guide/: nav.adoc
docs/modules/zookeeper/: nav.adoc
examples/: restart.command.example.yaml  simple-zookeeper-cluster.yaml  simple-zookeeper-tls-cluster.yaml  simple-zookeepercluster.yaml  simple-zookeeperznode.yaml  start.command.example.yaml  stop.command.example.yaml
examples/tls/: simple-zookeeper-tls-auth-class.yaml  simple-zookeeper-tls-cluster.yaml  simple-zookeeper-tls-secret-class.yaml  simple-zookeeper-tls-znode.yaml
extra/: crds.yaml
nix/: meta.json
operator/: Cargo.toml  config_config.json
operator/src/: error.rs  finalizer.rs  lib.rs
packaging/: buildrpm.sh  copy_assets.py
packaging/debian/: stackable-zookeeper-operator.service
packaging/rpm/SPECS/: stackable-zookeeper-operator.spec
python/: cargo_version.py  requirements.txt
rust/crd/: Cargo.toml
rust/crd/src/: affinity.rs  authentication.rs  commands.rs  discovery.rs  error.rs  lib.rs  security.rs  status.rs  tls.rs  util.rs
rust/crd/tests/: test_doc_examples.rs
rust/operator/: Cargo.toml  build.rs
rust/operator-binary/: Cargo.toml  build.rs
rust/operator-binary/src/: auth_config.rs  command.rs  config.rs  discovery.rs  framework.rs  listener.rs  main.rs  product_logging.rs  service.rs  stackable-zookeeper-operator.rs  test_support.rs  utils.rs  zk_controller.rs  znode_controller.rs
rust/operator-binary/src/config/: jvm.rs
rust/operator-binary/src/crd/: affinity.rs  authentication.rs  mod.rs  person.rs  security.rs  tls.rs
rust/operator-binary/src/framework/: role_utils.rs  writer.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  pdb.rs
rust/operator-binary/src/webhooks/: conversion.rs
rust/operator-binary/src/zk_controller/: build.rs  dereference.rs  validate.rs
rust/operator-binary/src/znode_controller/: dereference.rs  validate.rs
rust/operator/src/: crd.rs  error.rs  lib.rs  main.rs  utils.rs  znode_controller.rs
scripts/: docs_templating.sh  generate-manifests.sh
server/: Cargo.toml  build.rs
server/debian/: service
server/packaging/: buildrpm.sh  description
server/packaging/debian/: service
server/packaging/rpm/SOURCES/stackable-zookeeper-operator-server-VERSION/lib/systemd/system/: stackable-zookeeper-operator-server.service
server/packaging/rpm/SOURCES/stackable-zookeeper-operator-server-VERSION/usr/lib/systemd/system/: stackable-zookeeper-operator-server.service
server/packaging/rpm/SPECS/: stackable-zookeeper-operator-server.spec
server/src/: error.rs  main.rs
src/: controller.rs  crd.rs  lib.rs  main.rs  manager.rs  utils.rs  zk_controller.rs  znode_controller.rs
tests/: infrastructure.yaml  kuttl-test.yaml.jinja2  release.yaml  test-definition.yaml
(+150 files in other folders)
