[workspace]
members = ["rust/crd", "rust/operator-binary"]

[patch."https://github.com/stackabletech/operator-rs.git"]
stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "feature/resource-quotas" }
#stackable-operator = { path = "../operator-rs/" }

#[patch.crates-io]
# tokio-zookeeper = { git = "https://github.com/stackabletech/tokio-zookeeper.git", branch = "feature/tokio-modernize" }
