[workspace]
members = ["rust/crd", "rust/operator-binary"]

[patch."https://github.com/stackabletech/operator-rs.git"]
# stackable-operator = { path = "../operator-rs" }
stackable-operator = { git = "https://github.com/stackabletech//operator-rs.git", branch = "main" }

#[patch.crates-io]
# tokio-zookeeper = { git = "https://github.com/stackabletech/tokio-zookeeper.git", branch = "feature/tokio-modernize" }
