[package]
name = "stackable-zookeeper-crd"
version = "0.1.0"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false, features = ["jsonpatch", "derive"] }
kube-runtime = "0.52"
schemars = "0.8"
semver = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
strum = "0.20"
strum_macros = "0.20"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
indoc = "1.0"
rstest = "0.9"
serde_yaml = "0.8"

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
