[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Contains the Apache ZooKeeper CRD structs and utilities"
edition = "2018"
license = "OSL-3.0"
name = "stackable-zookeeper-crd"
version = "0.1.0-nightly"

[dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "main" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

k8s-openapi = { version = "0.12", default-features = false, features = ["v1_20"] }
kube = { version = "0.57", default-features = false, features = ["derive", "jsonpatch"] }
schemars = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
indoc = "1.0"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_20"] }
rstest = "0.10"
serde_yaml = "0.8"

[features]
default = ["native-tls"]
native-tls = ["kube/native-tls"]
rustls-tls = ["kube/rustls-tls"]
