[package]
name = "stackable-zookeeper-operator"
version = "0.1.0"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"

[dependencies]
stackable-zookeeper-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

futures = "0.3"
handlebars = "3.5"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.49", default-features = false, features = ["derive"] }
kube-runtime = "0.48"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"


[dev-dependencies]
rstest = "0.6"
