[package]
name = "stackable-zookeeper-operator"
version = "0.1.0"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"

[dependencies]
product-config = { git = "https://github.com/stackabletech/product-config.git", branch = "start" }
stackable-zookeeper-crd = { path = "../crd" }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }

async-trait = "0.1"
futures = "0.3"
handlebars = "3.5"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false, features = ["jsonpatch"] }
kube-runtime = "0.52"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"


[dev-dependencies]
rstest = "0.7"
