[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache ZooKeeper - The Operator Library"
edition = "2018"
license = "OSL-3.0"
name = "stackable-zookeeper-operator"
version = "0.1.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-zookeeper-crd = { path = "../crd" }

async-trait = "0.1"
futures = "0.3"
handlebars = "4.0"
k8s-openapi = { version = "0.11", default-features = false, features = ["v1_20"] }
kube = { version = "0.52", default-features = false, features = ["jsonpatch"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.21"
strum_macros = "0.21"
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
rstest = "0.10"
