[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache ZooKeeper"
edition = "2018"
license = "OSL-3.0"
name = "stackable-zookeeper-operator-server"
version = "0.1.0-nightly"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-zookeeper-crd = { path = "../crd" }
stackable-zookeeper-operator = { path = "../operator" }

tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-zookeeper-operator-server", "opt/stackable/zookeeper-operator/", "755"],
]
