[package]
name = "stackable-zookeeper-operator-server"
description = "Stackable Operator for Apache ZooKeeper"
version = "0.1.0-nightly"
authors = ["Lars Francke <lars.francke@stackable.de>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "common_structs" }
stackable-zookeeper-crd = { path = "../crd" }
stackable-zookeeper-operator = { path = "../operator" }

serde_yaml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-zookeeper-operator-server", "opt/stackable/zookeeper-operator/", "755"],
]
