[package]
authors = ["Lars Francke <lars.francke@stackable.de>"]
description = "Stackable Operator for Apache ZooKeeper"
edition = "2018"
license = "OSL-3.0"
name = "stackable-zookeeper-operator-server"
repository = "https://github.com/stackabletech/zookeeper-operator"
version = "0.1.0-nightly"
build = "build.rs"

[dependencies]
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-zookeeper-crd = { path = "../crd" }
stackable-zookeeper-operator = { path = "../operator" }

clap = "2.33"
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_21"] } # Depending on this here to choose the supported K8s version.
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[build-dependencies]
built = { version =  "0.5", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", branch = "main" }
stackable-zookeeper-crd = { path = "../crd" }

[package.metadata.deb]
maintainer-scripts = "packaging/debian/"
systemd-units = { enable = false }
assets = [
    ["../target/release/stackable-zookeeper-operator-server", "opt/stackable/zookeeper-operator/", "755"],
    ["../deploy/crd/zookeepercluster.crd.yaml", "etc/stackable/zookeeper-operator/crd/", "644"],
    ["../deploy/config-spec/properties.yaml", "etc/stackable/zookeeper-operator/config-spec/", "644"],
]
