[package]
name = "stackable-zookeeper-crd"
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Contains the Apache ZooKeeper CRD structs and utilities"
license = "OSL-3.0"
version = "0.0.0-dev"
edition = "2021"
repository = "https://github.com/stackabletech/zookeeper-operator"
publish = false

[dependencies]
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.42.1" }
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"

[dev-dependencies]
serde_yaml = "0.9"
