[package]
name = "stackable-zookeeper-crd"
description = "Contains the Apache ZooKeeper CRD structs and utilities"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
