[package]
name = "stackable-zookeeper-operator"
description = "Stackable Operator for Apache ZooKeeper"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[dependencies]
stackable-zookeeper-crd = { path = "../crd" }

anyhow.workspace = true
clap.workspace = true
failure.workspace = true
fnv.workspace = true
futures.workspace = true
semver.workspace = true
serde.workspace = true
snafu.workspace = true
strum.workspace = true
tokio.workspace = true
tokio-zookeeper.workspace = true
tracing.workspace = true
pin-project.workspace = true
stackable-operator.workspace = true

[dev-dependencies]
rstest.workspace = true

[build-dependencies]
built.workspace = true
