[package]
name = "stackable-zookeeper-operator"
description = "Stackable Operator for Apache ZooKeeper"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[dependencies]
stackable-zookeeper-crd = { path = "../crd" }

anyhow.workspace = true
clap.workspace = true
const_format.workspace = true
fnv.workspace = true
futures.workspace = true
indoc.workspace = true
pin-project.workspace = true
product-config.workspace = true
semver.workspace = true
serde.workspace = true
snafu.workspace = true
stackable-operator.workspace = true
strum.workspace = true
tokio-zookeeper.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_yaml.workspace = true

[build-dependencies]
built.workspace = true
