[package]
name = "stackable-zookeeper-operator"
description = "Stackable Operator for Apache ZooKeeper"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false
build = "build.rs"

[dependencies]
product-config.workspace = true
stackable-operator.workspace = true
stackable-webhook.workspace = true

anyhow.workspace = true
clap.workspace = true
const_format.workspace = true
fnv.workspace = true
futures.workspace = true
indoc.workspace = true
pin-project.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
strum.workspace = true
tokio-zookeeper.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_yaml.workspace = true

[build-dependencies]
built.workspace = true
